# RtmpLive

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/wyrtmplive/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safeQueue.h  wonderfulEnum.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/example/wyrtmplive/: AVConfigure.java  AudioChannel.java  CameraHelper.java  LiveState.java  MainActivity.java  VideoChannel.java  WonderfulPush.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/wyrtmplive/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
